--- a/templates/actor/actor-combat.html
+++ b/templates/actor/actor-combat.html
@@ -130,7 +130,7 @@
                 <div class="flexcol">
                     <label>Clip: </label>
                     <div class="flexrow">
-                        <input class="clip-current" type="text" value="{{actor.wornGear.leftHand.data.clip.value}}" name="actor.wornGear.leftHand.data.clip.value" data-dtype="Number">
+                        <input class="clip-current" type="text" value="{{actor.wornGear.leftHand.data.clip.value}}" name="actor.wornGear.leftHand.data.clip.value" data-item-id="{{actor.wornGear.leftHand._id}}" data-dtype="Number">
                         <span>/</span>
                         <span>{{actor.wornGear.leftHand.data.clip.max}}</span>
                     </div>
@@ -223,7 +223,7 @@
                 <div class="flexcol">
                     <label>Clip: </label>
                     <div class="flexrow">
-                        <input class="clip-current" type="text" value="{{actor.wornGear.rightHand.data.clip.value}}" name="actor.wornGear.rightHand.data.clip.value" data-dtype="Number">
+                        <input class="clip-current" type="text" value="{{actor.wornGear.rightHand.data.clip.value}}" name="actor.wornGear.rightHand.data.clip.value" data-item-id="{{actor.wornGear.rightHand._id}}" data-dtype="Number">
                         <span>/</span>
                         <span>{{actor.wornGear.rightHand.data.clip.max}}</span>
                     </div>
