--- a/templates/actor/actor-corruption.html
+++ b/templates/actor/actor-corruption.html
@@ -15,7 +15,7 @@
         <a class="item-create button" data-type="malignancy" title="Add new malignancy">Add Malignancy</a>
         <ul>
             {{#each actor.malignancies as |m key|}}
-            <div class="list-item flexrow "><dt class="item-descr" data-item-descr="{{m.data.description.value}}">{{m.name}}</dt>
+            <div class="list-item flexrow "><dt class="item-descr" data-name="{{m.name}}" data-item-descr="{{m.data.description.value}}">{{m.name}}</dt>
                 <a class="corrItem item-edit" title="Edit Malignancy" data-item-id="{{m._id}}"></a>
                 <a class="corrItem item-delete" title="Delete Malignancy" data-item-id="{{m._id}}"></a>
             </div>
@@ -27,7 +27,7 @@
         <a class="item-create button" data-type="mutation" title="Add new mutation">Add Mutation</a>
         <ul>
             {{#each actor.mutations as |m key|}}
-            <div class="list-item flexrow"><dt class="item-descr" data-item-descr="{{m.data.description.value}}">{{m.name}}</dt>
+            <div class="list-item flexrow"><dt class="item-descr" data-name="{{m.name}}" data-item-descr="{{m.data.description.value}}">{{m.name}}</dt>
                 <a class="corrItem item-edit" title="Edit Mutation" data-item-id="{{m._id}}"></a>
                 <a class="corrItem item-delete" title="Delete Mutation" data-item-id="{{m._id}}"></a>
             </div>
@@ -53,7 +53,7 @@
         <a class="item-create button" data-type="disorder" title="Add new disorder">Add Disorder</a>
         <ul>
             {{#each actor.disorders as |d key|}}
-            <div class="list-item flexrow"><dt class="item-descr" data-item-descr="{{d.data.description.value}}">{{d.name}}</dt>
+            <div class="list-item flexrow"><dt class="item-descr" data-name="{{d.name}}" data-item-descr="{{d.data.description.value}}">{{d.name}}</dt>
                 <a class="corrItem item-edit" title="Edit Disorder" data-item-id="{{d._id}}"></a>
                 <a class="corrItem item-delete" title="Delete Disorder" data-item-id="{{d._id}}"></a>
             </div>
